<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#292929"
    android:layout_height="match_parent"
    tools:context=".AddNotesActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTextView"
        android:text="@string/add_new_note"
        android:fontFamily="@font/ubuntubold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner"
        android:padding="10dp"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:hint="@string/title"
            android:fontFamily="@font/ubunturegular"
            android:padding="10dp"
            android:textColorHint="#BABABA"
            android:textColor="@color/white"
            android:background="#5092939A"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:hint="@string/description"
            android:fontFamily="@font/ubunturegular"
            android:textColorHint="#BABABA"
            android:textColor="@color/white"
            android:padding="10dp"
            android:background="#5092939A"
            android:layout_margin="10dp"
            android:lines="10"
            android:gravity="top"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/ubuntumedium"
        android:layout_gravity="center"
        android:text="@string/add_notes"
        android:textSize="18sp"
        android:backgroundTint="@color/white"
        android:textColor="#353539"
        android:id="@+id/AddNote"/>
    <!--    <EditText-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->

    <!--        android:layout_margin="8dp"-->
    <!--        android:hint="Title"-->
    <!--        android:id="@+id/title"-->
    <!--        android:textColor="@color/black"/>-->

    <!--    <EditText-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->

    <!--        android:layout_margin="8dp"-->
    <!--        android:hint="Description"-->
    <!--        android:id="@+id/description"-->
    <!--        android:layout_below="@+id/title"-->
    <!--        android:textColor="@color/black"/>-->

</LinearLayout>